# synapse-protocol

./: Anchor.toml  Dockerfile  Dockerfile.jupyter  LICENSE  README.md  docker-compose.yml  env.example  index.ts  jupyter_notebook_config.py  package.json  tsconfig.json
ai/: AutoScaler.ts  LearningModule.ts  ModelManager.ts  NeuralOptimizer.ts
api/: README.md  package.json
api/src/config/: index.ts
api/src/controllers/: metricsController.ts  nodeController.ts  proposalController.ts
api/src/middleware/: errorHandler.ts  validateRequest.ts
api/src/routes/: metricsRoutes.ts  nodeRoutes.ts  proposalRoutes.ts
api/src/services/: synapseClient.ts
api/src/utils/: logger.ts
benchmarks/: README.md  package.json
benchmarks/src/: consensus.ts  network.ts  neural.ts  visualize.ts
benchmarks/src/utils/: network.ts  neural.ts  results.ts  system.ts
blockchain/: ConsensusEngine.ts
collaboration/: SynapticSpace.ts
config/: index.ts
contracts/solana/: synapse_core.rs
core/: AdaptiveContract.ts  NeuralMesh.ts  SynapseProtocol.ts
errors/: index.ts
examples/: basic_node.ts  defi_optimizer.ts  distributed_training.ts
programs/synapse/: Cargo.toml
sdk/python/synapse_protocol/: client.py
sdk/typescript/src/: client.ts  idl.ts
security/: SecurityModule.ts
tests/: synapse_protocol.ts
tools/: key-manager.ts  network-monitor.ts  protocol-cli.ts
types/: index.ts
utils/: ConfigManager.ts  Logger.ts  MetricsCollector.ts
